--- a/console/src/components/Services/Data/TableCommon/Table.scss
+++ b/console/src/components/Services/Data/TableCommon/Table.scss
@@ -1,4 +1,5 @@
 @import "../../../Common/Common.scss";
+
 .container {
   padding: 0;
 }
@@ -9,6 +10,7 @@
   margin-top: 10px;
   color: rgb(236, 61, 61);
 }
+
 .tableContainer {
   overflow: auto;
   //margin-top: 25px;
@@ -16,24 +18,26 @@
 
 .schemaWrapper {
   width: 100%;
+
   .schemaSidebarSection {
     display: inline-block;
     width: 100%;
     padding-left: 15px;
-    a
-    {
+
+    a {
       display: inline-block !important;
       font-weight: bold;
     }
   }
 }
-.changeSchema
-{
+
+.changeSchema {
   width: 50%;
   margin-left: 10px;
   display: inline-block;
   font-weight: bold;
 }
+
 .aceBlock {
   max-height: 300px;
   position: relative;
@@ -72,12 +76,15 @@
   button {
     margin: 0 10px;
   }
+
   label.radioLabel {
     padding-top: 0;
+
     input[type="radio"] {
       margin-top: 10px;
     }
   }
+
   span.radioSpan {
     line-height: 34px;
   }
@@ -85,14 +92,17 @@
 
 .table {
   width: auto;
+
   thead {
     background: #333;
     color: #ddd;
   }
+
   th {
     min-width: 100px;
     font-weight: 300;
   }
+
   td {
     max-width: 300px;
     white-space: pre;
@@ -119,11 +129,13 @@ a.expanded {
 .tableNameInput {
   width: 300px;
 }
+
 .addCol {
   .input {
     width: 300px;
     display: inline-block;
   }
+
   .inputCheckbox {
     width: auto;
     display: inline-block;
@@ -131,28 +143,32 @@ a.expanded {
     margin: 0px 20px;
     box-shadow: none;
   }
-  .inputDefault
-  {
+
+  .inputDefault {
     width: 150px;
     margin: 0px 20px;
     display: inline-block;
   }
-  .remove_ul_left
-  {
+
+  .remove_ul_left {
 
   }
+
   .select {
     display: inline-block;
     width: 300px;
     height: 34px;
   }
+
   .selectWidth {
     width: 200px;
   }
+
   .defaultWidth {
     width: 200px;
     margin-right: 0px;
   }
+
   i:hover {
     cursor: pointer;
     color: #B85C27;
