--- a/console/src/components/Services/Data/TableModify/Modify.scss
+++ b/console/src/components/Services/Data/TableModify/Modify.scss
@@ -1,4 +1,5 @@
 @import "../../../Common/Common.scss";
+
 .container {
   padding: 0;
 }
@@ -25,8 +26,8 @@
   :global(.form-control):focus {
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 0 rgba(102, 175, 233, 0.6);
   }
-  .yellow_button, .yellow_button1
-  {
+
+  .yellow_button, .yellow_button1 {
     text-align: center !important;
     margin-right: 15px;
   }
@@ -52,20 +53,19 @@
 .select {
   margin-right: 10px;
 }
-.modifyMinWidth
-{
+
+.modifyMinWidth {
   min-width: 735px;
 }
+
 .leftIndent {
   padding-left: 0;
   margin-left: 0 !important;
   margin-right: 0 !important;
-  .insertRatio
-  {
-    .paddRight
-    {
-      select
-      {
+
+  .insertRatio {
+    .paddRight {
+      select {
         width: 150px;
         display: inline-block;
         margin: 0 10px;
@@ -74,10 +74,11 @@
     }
   }
 }
-hr
-{
+
+hr {
   clear: both;
 }
+
 .removeBtnPadding {
   padding-left: 66px;
 }
@@ -101,6 +102,7 @@ hr
   box-shadow: none;
   outline: none;
 }
+
 .nullable:focus {
   box-shadow: none;
   outline: none;
@@ -127,8 +129,8 @@ hr
 .relBlockRight {
   width: 30%;
 }
-.radioWrapperAccess
-{
+
+.radioWrapperAccess {
   background-color: #F2F4F6;
   padding: 20px;
   clear: both;
@@ -175,14 +177,17 @@ hr
     font-weight: bold;
     width: 10%;
   }
+
   td:nth-child(2) {
     overflow: auto;
     max-width: 250px;
     width: 250px;
   }
+
   .newRoleTd {
     padding-top: 13px;
   }
+
   .permissionDelete {
     cursor: pointer;
   }
@@ -244,6 +249,7 @@ hr
 .center_radio_label_input {
   display: flex;
   align-content: center;
+
   input {
     margin-top: 0px;
   }
@@ -256,13 +262,16 @@ hr
     margin-bottom: 5px;
     word-wrap: break-word;
   }
+
   .editPermissionsSection.removePadding {
     padding-top: 0px;
   }
+
   .editPermissionsSection {
     margin: 5px;
     padding: 10px;
     word-wrap: break-word;
+
     .columnListElement {
       float: left;
       margin-right: 50px;
@@ -279,6 +288,7 @@ hr
     .editActionButton {
       margin-right: 20px;
     }
+
     .form_permission_insert_set_wrapper {
       .permission_insert_set_wrapper {
         .configure_insert_set_checkbox {
@@ -286,37 +296,47 @@ hr
           display: block;
           margin-top: 10px;
           margin-bottom: 10px;
+
           label {
             cursor: pointer;
             min-height: 20px;
             font-weight: normal;
+
             input:not([disabled]) {
               cursor: pointer;
             }
           }
         }
+
         .insertSetConfigRow {
           margin: 10px 0px;
           display: flex;
           align-items: center;
+
           .e_g_text {
             font-style: italic;
           }
+
           .input_element_wrapper {
             width: 20%;
+
             i {
               cursor: pointer;
             }
+
             select {
               width: 100%;
             }
+
             input {
               width: 100%;
             }
           }
         }
+
         .set_warning {
           margin-left: 25px;
+
           .danger_text {
             color: red;
           }
