--- a/console/src/theme/bootstrap.overrides.scss
+++ b/console/src/theme/bootstrap.overrides.scss
@@ -8,10 +8,10 @@
 /* */
 
 
-input[type="radio"], input[type="checkbox"]
-{
+input[type="radio"], input[type="checkbox"] {
   margin: 0 5px 0px 0px;
 }
+
 .dropdown.input-group-btn {
   button {
     min-height: 34px;
@@ -22,10 +22,10 @@ input[type="radio"], input[type="checkbox"]
   min-width: 300px;
 }
 
-label
-{
+label {
   margin-bottom: 0 !important;
 }
+
 .navbar-brand {
   position: relative;
   padding-left: 50px;
@@ -41,13 +41,15 @@ label
   color: #33e0ff;
   background-color: transparent;
 }
-.control-label
-{
+
+.control-label {
   padding-top: 0;
 }
+
 form {
     margin-bottom: 0em;
 }
+
 .form-control:focus {
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 0px rgba(102, 175, 233, 0.6);
 }
@@ -56,27 +58,29 @@ form {
   // border-radius: 0;
   height: auto;
 }
-select.form-control
-{
+
+select.form-control {
   border-radius: 0;
   -webkit-border-radius: 0px;
 }
+
 .btn {
   // border-radius: 0;
   outline: none;
 }
-.btn:active, .btn.active
-{
+
+.btn:active, .btn.active {
   box-shadow: none !important;
 }
-.btn:focus, .btn.focus, .btn:active:focus, .btn:active.focus, .btn.active:focus, .btn.active.focus
-{
+
+.btn:focus, .btn.focus, .btn:active:focus, .btn:active.focus, .btn.active:focus, .btn.active.focus {
   outline: none !important;
 }
-.btn:focus
-{
+
+.btn:focus {
   outline: none !important;
 }
+
 .alert {
 	word-wrap: break-word;
 }
@@ -89,28 +93,27 @@ select.form-control
   font-size: 12px !important;
   line-height: 1.5 !important;
 }
+
 .btn-warning:hover {
   color: #000;
   background-color: #F2B130 !important;
   border-color: #F2B130 !important;
 }
-.btn-warning:focus
-{
+
+.btn-warning:focus {
   background-color: #F2B130 !important;
 }
 // Generate Code modal
-.padd_remove
-{
+.padd_remove {
   padding-left: 0 !important;
   padding-right: 0 !important;
 }
-.generateCodeWrapper
-{
+
+.generateCodeWrapper {
   width: 65% !important;
-  .modal-content
-  {
-    .modal-header
-    {
+
+  .modal-content {
+    .modal-header {
       background-color: #F8FAFB;
       color: #222 ;
       padding: 20px;
@@ -118,36 +121,34 @@ select.form-control
       border-top-right-radius: 4px;
       border-bottom: 0;
       border-bottom: 1px solid #ccc;
-      h4
-      {
+
+      h4 {
         font-size: 16px;
         font-weight: bold;
       }
-      button
-      {
+
+      button {
         text-shadow: none;
         color: #C4C6C6;
         opacity: 1;
-        span
-        {
+
+        span {
           font-weight: normal;
         }
       }
     }
-    .modal-body
-    {
+
+    .modal-body {
       padding: 25px;
-      .generateBodyWrapper
-      {
-        .generateButtonWrapper
-        {
+
+      .generateBodyWrapper {
+        .generateButtonWrapper {
           width: 100%;
           float: left;
           padding-bottom: 20px;
-          .generateSelect
-          {
-            button
-            {
+
+          .generateSelect {
+            button {
               width: auto;
               padding: 10px 35px;
               padding-left: 10px;
@@ -158,18 +159,19 @@ select.form-control
               text-align: left;
               border: 1px solid #ccc;
               position: relative;
-              .dropCaret
-              {
+
+              .dropCaret {
                 position: absolute;
                 right: 10px;
                 top: 16px;
               }
             }
           }
-          .generateCopyButton
-          {
+
+          .generateCopyButton {
             text-align: right;
             font-weight: bold;
+
             button {
               background-color: #FEC53D;
               border-radius: 5px;
@@ -178,16 +180,17 @@ select.form-control
               padding: 5px 10px;
               font-size: 12px;
               line-height: 1.5;
+
               &:hover {
                 background-color: #F2B130;
               }
             }
           }
-          .generateCopyButtonDisabled
-          {
+
+          .generateCopyButtonDisabled {
             text-align: right;
-            button
-            {
+
+            button {
               border-radius: 5px;
               border: 1px solid #606060;
               height: 39px;
@@ -199,14 +202,14 @@ select.form-control
               font-weight: bold;
             }
           }
-          .ace_editor
-          {
+
+          .ace_editor {
             min-height: 150px;
             border: 1px solid #ccc;
             border-radius: 5px;
           }
-          .ace-github
-          {
+
+          .ace-github {
             min-height: 150px;
             border: 1px solid #ccc;
             border-radius: 5px;
