--- a/console/src/components/Common/SchemaContainer.scss
+++ b/console/src/components/Common/SchemaContainer.scss
@@ -1,5 +1,5 @@
 @import "~bootstrap-sass/assets/stylesheets/bootstrap/variables";
-@import "../../Common.scss";
+@import "./Common.scss";
 
 .flexRow {
   display: flex;
