update console browse rows section (close #1622) (#1642)
* Update browse rows UI
* Make columns draggable
* Make columns collapsible
* Allow multiple columns sort using column headers
* Add no sort option while toggling

--- a/console/src/components/Services/Data/TableCommon/Table.scss
+++ b/console/src/components/Services/Data/TableCommon/Table.scss
@@ -52,20 +52,11 @@
   border-left: 1px solid #ddd;
 }
 
-.cellExpand {
-  transform: rotate(-45deg);
-  cursor: pointer;
-  top: -5px;
-  left: 0px;
-  right: 0px;
-}
-
-.cellCollapse {
-  cursor: pointer;
-  top: -5px;
-  left: 0px;
-  right: 0px;
-  padding-right: 5px;
+.tableHeaderCell i {
+  font-size: 12px;
+  position: absolute;
+  top: calc(50% - 5px);
+  right: 8px;
 }
 
 .insertContainer {
@@ -194,7 +185,6 @@ a.expanded {
   text-align: center;
 }
 
-.tableCellCenterAlignedExpanded {
-  text-align: center;
+.tableCellExpanded {
   white-space: normal;
 }
