remote schema page new design ui update

--- a/console/src/components/Services/CustomResolver/Popup.scss
+++ b/console/src/components/Services/CustomResolver/Popup.scss
@@ -69,7 +69,8 @@
   .descriptionText
   {
     text-align: left;
-    padding-bottom: 15px
+    padding-bottom: 15px;
+    color: #505050;
   }
   .listItems
   {
