--- a/console/src/components/Services/CustomResolver/Styles.scss
+++ b/console/src/components/Services/CustomResolver/Styles.scss
@@ -187,14 +187,39 @@
   margin-top: 20px;
   position: relative;
   cursor: pointer;
-  img
+  color: #909090;
+  display: flex;
+  align-items: center;
+  .rightArrow
   {
-    width: 8px;
-    display: inline-block;
-    margin-left: 12px;
+    margin-top: 3px;
   }
 }
 
+.displayFlex
+{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.rightArrow
+{
+  width: 0;
+  height: 0;
+  border-top: 6px solid transparent;
+  border-bottom: 6px solid transparent;
+  border-left: 8px solid #909090;
+  margin-left: 12px;
+  display: inline-block;
+}
+.instructions:hover
+{
+  color: #505050;
+  .rightArrow
+  {
+    border-left: 8px solid #505050;
+  }
+}
 .tryOutWrapper
 {
   padding: 30px 0;
@@ -224,9 +249,25 @@
     {
       display: inline-block;
     }
-    .instructions
+    .instructionsWrapper
     {
       border-top: 1px solid #DEDEDE;
+      .instructions
+      {
+        margin-top: 0;
+        padding: 0 0;
+      }
+    }
+    .instructionsWrapper:hover
+    {
+      .instructions
+      {
+        color: #505050
+      }
+      .rightArrow
+      {
+        border-left: 8px solid #505050;
+      }
     }
   }
   .boxSmallWrapper
@@ -248,6 +289,14 @@
       .imgAws
       {
         width: 59px;
+      }
+    }
+    a:hover
+    {
+      .boxSmall
+      {
+        transition: all 0.3s ease-out;
+        border: 1px solid #909090;
       }
     }
     .instructions
