--- a/console/src/components/Common/Layout/RightContainer/RightContainer.scss
+++ b/console/src/components/Common/Layout/RightContainer/RightContainer.scss
@@ -1,5 +1,5 @@
-@import "~bootstrap-sass/assets/stylesheets/bootstrap/variables";
-@import "../Common.scss";
+@import "../../../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/variables";
+@import "../../Common";
 
 .flexRow {
   display: flex;
