--- a/console/src/components/Services/EventTrigger/Modify/Modify.scss
+++ b/console/src/components/Services/EventTrigger/Modify/Modify.scss
@@ -1,5 +1,4 @@
-@import "../../../Common/Common.scss";
-@import "../TableCommon/Table.scss";
+@import "../TableCommon/EventTable.scss";
 
 .containerWhole {
   padding: 0;
@@ -73,11 +72,6 @@
 
 .textRight {
   text-align: right;
-}
-
-.noPadd {
-  padding-left: 0;
-  padding-right: 0;
 }
 
 .modifyOpsCollapsedContent {
