--- a/console/src/components/Services/EventTrigger/TableCommon/EventReactTableOverrides.css
+++ b/console/src/components/Services/EventTrigger/TableCommon/EventReactTableOverrides.css
@@ -1,77 +1,13 @@
-.ReactTable .-pagination .-btn {
-  height: 35px !important;
-  width: 40%;
-  display: inline-block;
-  font-weight: bold;
-}
-.ReactTable .rt-thead {
-  font-size: 16px;
-  color: #333;
-  background-color: #ddd;
-  cursor: pointer;
-}
-.ReactTable .rt-thead .rt-resizable-header-content {
-  font-weight: bold;
-}
-.ReactTable .rt-thead.-header {
-  box-shadow: none;
-}
-.ReactTable .-pagination {
-  box-shadow: none;
-}
-.ReactTable .rt-thead .rt-th,
-.ReactTable .rt-thead .rt-td {
-  padding: 10px !important;
-}
-
-.ReactTable .rt-table .rt-thead .rt-tr .rt-th {
-  background-color: #f2f2f2 !important;
-  color: #4d4d4d;
-  font-weight: 600 !important;
-  border-bottom: 2px solid #ddd;
-}
-
 .eventsTableBody .ReactTable .rt-table .rt-thead .rt-tr .rt-th:first-child {
-  flex: 24 0 auto !important;
   min-width: 75px;
 }
 
-.eventsTableBody
-  .ReactTable
-  .rt-table
-  .rt-tbody
-  .rt-tr-group
-  .rt-tr.-odd
-  .rt-td:first-child {
-  flex: 24 0 auto !important;
+.eventsTableBody .ReactTable .rt-table .rt-tbody .rt-tr-group .rt-tr.-odd .rt-td:first-child {
   min-width: 75px;
 }
 
-.eventsTableBody
-  .ReactTable
-  .rt-table
-  .rt-tbody
-  .rt-tr-group
-  .rt-tr.-even
-  .rt-td:first-child {
-  flex: 24 0 auto !important;
+.eventsTableBody .ReactTable .rt-table .rt-tbody .rt-tr-group .rt-tr.-even .rt-td:first-child {
   min-width: 75px;
-}
-
-.ReactTable .rt-table .rt-tbody .rt-tr-group .rt-tr.-odd:hover {
-  background-color: #ebf7de;
-}
-
-.ReactTable .rt-table .rt-tbody .rt-tr-group .rt-tr.-even:hover {
-  background-color: #ebf7de;
-}
-
-.ReactTable .rt-tbody {
-  overflow-x: hidden !important;
-}
-
-.ReactTable .rt-thead [role='columnheader'] {
-  outline: 0;
 }
 
 .invocationsSection .ReactTable .rt-tbody .rt-td {
