--- a/console/src/components/Services/CustomResolver/Popup.scss
+++ b/console/src/components/Services/CustomResolver/Popup.scss
@@ -1,5 +1,5 @@
 @import "../../Common/Common.scss";
-@import "../Layout/ReusableTextAreaWithCopy/style.scss";
+@import "../../Common/Layout/ReusableTextAreaWithCopy/style.scss";
 .wd100
 {
   width: 100%;
