--- a/console/src/components/Main/Main.scss
+++ b/console/src/components/Main/Main.scss
@@ -1067,8 +1067,8 @@
   }
 }
 
-.help_dropdown_menu_heart_consented {
-  right: 0px;
+.help_dropdown_menu_heart_dismissed {
+  right: 0;
 }
 
 .dropdown_menu {
