--- a/console/src/components/Common/Layout/RightContainer/RightContainer.scss
+++ b/console/src/components/Common/Layout/RightContainer/RightContainer.scss
@@ -1,6 +1,9 @@
 @import "~bootstrap-sass/assets/stylesheets/bootstrap/variables";
 @import "../../Common.scss";
 
+.container {
+}
+
 .flexRow {
   display: flex;
 }
