equal spacing between arg labels

--- a/console/src/components/ApiExplorer/OneGraphExplorer.css
+++ b/console/src/components/ApiExplorer/OneGraphExplorer.css
@@ -24,5 +24,9 @@
 }
 
 .graphiql-explorer-node {
-  margin-top: 8px;
+  margin-top: 5px;
+}
+
+.graphiql-explorer-args-wrapper {
+  margin-top: 5px;
 }
