resolved merge issues

--- a/console/src/components/Services/CustomResolver/Landing/Popup.scss
+++ b/console/src/components/Services/CustomResolver/Landing/Popup.scss
@@ -1,5 +1,6 @@
-@import "../../Common/Common.scss";
-@import "../../Common/Layout/ReusableTextAreaWithCopy/style.scss";
+@import "../../../Common/Common.scss";
+@import "../../../Common/TextAreaWithCopy/TextAreaWithCopy.scss";
+
 .wd100
 {
   width: 100%;
